Fixed issue of 'to top' button with flexbox layout
Fixed issue with 'to top' button not being able to be clicked with flexbox layout triggered in widescreen format.  Issue fixed by setting z-index for the 'to top' button to 1.  Was an overlap issue as it was visible, but not clickable.

--- a/assets/css/resume.scss
+++ b/assets/css/resume.scss
@@ -81,6 +81,7 @@ nav{
   bottom: 10px;//Places button on screen for non JS users.
   opacity: 0.1;
   border-radius: 5px;
+  z-index: 1;
 }
 
 .to_top_button:hover{
